cluster/apps/auth/pocket-id/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id-external
  annotations:
    gatus.io/enabled: "true"
spec:
  parentRefs:
    - name: external-gateway
      namespace: networking
      sectionName: https
  hostnames:
    - "id.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: traefik-middleware-chain-no-auth
      backendRefs:
        - name: pocket-id
          port: 1411
